--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  shared_preferences: ^0.5.12+4
+  #shared_preferences: ^0.5.12+4
+  shared_preferences: ^2.0.0-nullsafety  
   http: ^0.13.3
 
 dev_dependencies:
