--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,8 +4,10 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "name": "firstflutter",
+            "program": "lib/PostApi.dart",
             "request": "launch",
             "type": "dart"
         },
