--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  platform: ^3.1.0
   #localstorage: ^3.0.6
   flutter:
     sdk: flutter
@@ -32,6 +33,18 @@ dependencies:
   #shared_preferences: ^0.5.12+4
   shared_preferences: ^2.0.0-nullsafety  
   http: ^0.13.3
+  #flutter pub add path_provider
+  path_provider: ^2.0.9
+  #flutter pub add sqflite  
+  sqflite: ^2.0.2
+  #flutter pub add path
+  path: ^1.8.0
+  #path_provider_ex: ^1.0.1
+  #ext_storage: ^1.0.3
+  permission_handler: ^8.0.0+2
+  image_picker: ^0.8.5
+  image: ^3.1.3
+  #simple_permissions: ^0.1.9
 
 dev_dependencies:
   flutter_test:
@@ -43,6 +56,10 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+
+  assets:
+    - assets/
+    - assets/images/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
@@ -65,17 +82,31 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+      - family: GiveAway
+        fonts:
+          - asset: fonts/GiveAway.ttf
+      - family: BusinessSignatureDemo
+        fonts:
+          - asset: fonts/BusinessSignatureDemo.otf
+            weight: 700          
+      - family: Hujan
+        fonts:
+          - asset: fonts/Hujan.ttf
+      - family: Satherday
+        fonts:
+          - asset: fonts/Satherday.otf
+      - family: Techovier 
+        fonts:
+          - asset: fonts/Techovier.ttf
+          - asset: fonts/TechovierBold.ttf
+  
+      - family: GaretBook 
+        fonts:
+          - asset: fonts/Garet-Book.ttf
+      - family: GaretHeavy
+        fonts:
+          - asset: fonts/Garet-Heavy.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
